Signed-off-by: Lyndon <384399002@qq.com>

--- a/Application/Home/View/Index/detail.html
+++ b/Application/Home/View/Index/detail.html
@@ -11,7 +11,7 @@
             background: url('/PlanB/Public/Images/bg.jpg') repeat;
             padding: 20px 50px;
             ;
-            font-size: 100%;
+            font-size: 1.2em;
         }
         
         tfoot tr {
@@ -29,6 +29,39 @@
 </head>
 
 <body>
+    <!-- 初始隐藏 dialog内容 -->
+    <div id="editcontent" class="hide">
+        <form class="form-horizontal">
+            <p>
+                <label>类别：</label>
+                <input name="collection" type="text" readonly>
+            </p>
+            <p>
+                <label>名称：</label>
+                <input name="name" type="text" readonly>
+            </p>
+            <p>
+                <label>入库：</label>
+                <input name="input" type="text">
+            </p>
+            <p>
+                <label>出库：</label>
+                <input name="output" type="text">
+            </p>
+            <p>
+                <label>日期：</label>
+                <input name="date" type="text" class="calendar" readonly>
+            </p>
+            <p>
+                <label>用户：</label>
+                <input name="user" type="text" readonly>
+            </p>
+            <p>
+                <label>备注：</label>
+                <input name="note" type="text">
+            </p>
+        </form>
+    </div>
     <!-- 此节点内部的内容会在弹出框内显示,默认隐藏此节点-->
     <div id="content" class="bui-hidden">
         <div style="text-align:center;">
@@ -58,8 +91,7 @@
                 </p>
                 <p>
                     <label>用户：</label>
-                    <input type="text" id="username" name="username" disabled="true" value="{$username}" />
-                    <input type="hidden" name="username" value="{$username}" />
+                    <input type="text" id="username" name="username" readonly value="{$username}" />
                 </p>
                 <p>
                     <label>备注：</label>
@@ -71,7 +103,7 @@
     <!-- End -->
     <div style="margin-bottom: 30px;">
         <button class="button" onclick="javascript:self.location='__URL__/Index'" style="margin-right:3%;width: 50px;;">返回</button>
-        <span id="detail_name" style="margin-left:15%"></span>
+        <span id="detail_name" style="margin-left:20%;"></span>
         <span style="float: right;margin-right: 50px;">
         <button id="btnInput" class="button button-primary" style="margin-right: 10px;">入库</button>
         <button id="btnOutput" class="button button-success" style="margin-right: 20px;">出库</button>
@@ -124,6 +156,11 @@
         //详情弹窗
         var detailcolumns = [
             {
+                title: 'ID',
+                dataIndex: 'id',
+                visible:false
+            },
+            {
                 title: '日期',
                 dataIndex: 'date',
                 elCls: 'center',
@@ -160,10 +197,24 @@
                 dataIndex: 'note',
                 elCls: 'center',
                 width: "25%"
+            },
+            {
+                title : '操作',dataIndex:'e',renderer : function(value,obj){
+              return '<span class="grid-command btn-edit">编辑</span><span class="grid-command" style="margin-left:10px;" onclick="delrow('+obj.id+');">删除</span>'
+                }
             }
         ];
-
-        var detailstore = new Store({
+        
+        var editing = new Grid.Plugins.DialogEditing({
+            contentId : 'editcontent', //设置隐藏的Dialog内容
+            triggerCls : 'btn-edit', //触发显示Dialog的样式
+            editor : {
+              title : '自定义',
+              width : 600
+            }
+          }),
+        
+        detailstore = new Store({
                     url: '__URL__/getList',
                     pageSize: 10, // 配置分页数目
                     autoLoad: false
@@ -172,14 +223,32 @@
                     render: '#grid',
                     loadMask: true, //加载数据时显示屏蔽层
                     width: '100%', //如果表格使用百分比，这个属性一定要设置
-                    plugins: [Grid.Plugins.Summary],// 插件形式引入单选表格
+                    plugins: [editing,Grid.Plugins.Summary],// 插件形式引入单选表格
                     columns: detailcolumns,
-                    store: detailstore,                    
+                    store: detailstore,
                     emptyDataTpl: '<div class="centered"><img alt="Crying" src="__PUBLIC__/Images/norecord.png"><h2>查询的数据不存在</h2></div>'
                 });
-        detailgrid.render();        
+        detailgrid.render();
         detailstore.load({
             "name": '{$name}'
+        });
+        
+        // editing.on('editorshow',function(ev){
+        //   var editor = editing.get('curEditor');
+        //   editor.set('errorAlign',{
+        //     points :['br','tr'] ,
+        //     offset: [0, 10]
+        //   });
+        // });
+        editing.on('accept',function(ev){
+           detailstore.save('update',ev.record,function(callback){
+               if(callback == 1){
+                   alert('成功');
+                   location.reload();
+               }else{
+                   alert('失败')
+               }
+           })
         });
         </script>
         <!-- script start -->
@@ -213,7 +282,7 @@
                     text: '提交',
                     elCls: 'button button-primary',
                     handler: function () {
-                        if($("[name='name']").val() !== '' && $('#amount').val() !== ''){
+                        if($('#amount').val() !== ''){
                         //提交表单
                         $.ajax({
                             url: '__URL__/addRecord',
@@ -243,7 +312,7 @@
                             }
                         });
                         }else{
-                            alert('请填写名称和数量');
+                            alert('请填写名称及数量');
                         }
                     }
                 }, {
@@ -270,32 +339,58 @@
             $("#action").val("出库");
             $("#amount").val("");
         });
-
         </script>
         <!-- script end -->
         <script type="text/javascript">
             $(document).ready(function () {
-                $('#detail_name').html('<a style="font-size:30px;bold;">{:$_GET["name"]}的详细记录</a>')
-            
-            $('#date').val(GetDateStr(0));
-            $('#syear, #smonth').on('change', function () {
-                detailstore.load({
-                    "name": '{$name}',
-                    "year": $('#syear').val(),
-                    "month": $('#smonth').val()
+                $('#detail_name').html('<a style="font-size:30px;bold;">{:$_GET["name"]}</a>');            
+                $('#date').val(GetDateStr(0));
+                $('#syear, #smonth').on('change', function () {
+                    detailstore.load({
+                        "name": '{$name}',
+                        "year": $('#syear').val(),
+                        "month": $('#smonth').val()
+                    });
                 });
             });
-        });
         </script>
         <script type="text/javascript">
             function GetDateStr(AddDayCount) {
-            var dd = new Date();
-            dd.setDate(dd.getDate() + AddDayCount);//获取AddDayCount天后的日期
-            var y = dd.getFullYear();
-            var m = dd.getMonth() + 1;//获取当前月份的日期
-            var d = dd.getDate();
-            return y + "-" + m + "-" + d;
-        }
+                var dd = new Date();
+                dd.setDate(dd.getDate() + AddDayCount);//获取AddDayCount天后的日期
+                var y = dd.getFullYear();
+                var m = dd.getMonth() + 1;//获取当前月份的日期
+                var d = dd.getDate();
+                return y + "-" + m + "-" + d;
+            }
+            
+            function delrow(id){
+                BUI.Message.Confirm('确认删除？',function(){
+                    $.ajax({
+                            url: '__URL__/delRecord',
+                            data: 'id=' + id,
+                            type: "get",
+                            cache: false,
+                            dataType: 'text',
+                            success: function (data) {
+                                if (data == 0) {
+                                    alert("删除失败");
+                                } else {
+                                    alert("删除成功");
+                                    detailstore.load({
+                                        "name":"{$name}",
+                                        "year": $('#syear').val(),
+                                        "month": $('#smonth').val()
+                                    })
+                                }
+                            },
+                            error: function (XMLHttpRequest, textStatus, errorThrown) {
+                                // view("异常！");
+                                alert(XMLHttpRequest.status + "\n" + textStatus + "\n" + errorThrown);
+                            }
+                        });
+                });
+            }
         </script>
     </div>
 </body>
