--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -11,7 +11,7 @@
             background: url('/PlanB/Public/Images/bg.jpg') repeat;
             padding: 20px 50px;
             ;
-            font-size: 100%;
+            font-size: 1.2em;
         }
         
         tfoot tr {
@@ -82,17 +82,17 @@
         <button id="btnInput" class="button button-primary" style="margin-right: 10px;width: 50px;">入库</button>
         <button id="btnOutput" class="button button-success" style="margin-right: 10px;width: 50px;">出库</button>
         <button id="btnCollection" class="button">设置类别</button>
-        <span style="float: right;margin-right: 30px;">
-            <label>类别：</label>
-            <select name="collectionpicker" id="collectionpicker" style="width:100px;margin-right: 20px;">
-                <option value="全部">全部</option>
-                <volist name="vo2" id="vo2">
-                    <option value="{$vo2.name}">{$vo2.name}</option>
-                </volist>
-            </select>
-            <label>名称：</label>
-            <input type="text" name="sname" id="sname" class="bui-form-field" />
-            <button class='button button-small button-primary' id="searchbtn">搜索</button>
+        <span style="float:right;margin-right:3%;">
+        <label >类别：</label>
+        <select name="collectionpicker" id="collectionpicker" style="width:100px;margin-right: 20px;">
+            <option value="全部">全部</option>
+            <volist name="vo2" id="vo2">
+                <option value="{$vo2.name}">{$vo2.name}</option>
+            </volist>
+        </select>
+        <label>名称：</label>
+        <input type="text" name="sname" id="sname" class="bui-form-field" />
+        <button class='button button-small button-primary' id="searchbtn">搜索</button>
         </span>
     </div>
 
@@ -365,6 +365,7 @@
                     elCls: 'button button-primary',
                     handler: function () {
                         this.close();
+                        location.reload();
                     }
                 }
             ]
