--- a/Application/Home/View/Index/detail.html
+++ b/Application/Home/View/Index/detail.html
@@ -108,7 +108,8 @@
     </div>
     <!-- End -->
     <div style="margin-bottom: 30px;">
-        <button class="button" onclick="javascript:self.location='__URL__/Index'" style="margin-right:3%;width: 50px;;">返回</button>
+        <button class="button" onclick="javascript:self.location='__URL__/Index'" style="margin-right:3%;width: 50px;">返回</button>
+        <button class="button button-primary" onclick="javascript:self.location='__URL__/achart/name/{$name}'" style="width: 50px;">图表</button>
         <span id="detail_name" style="margin-left:20%;"></span>
         <span style="float: right;margin-right: 50px;">
         <button id="btnInput" class="button button-primary" style="margin-right: 10px;">入库</button>
@@ -129,9 +130,17 @@
         <script>
             for (i = 1; i <= 12; i++) {
                 if (i == new Date().getMonth() + 1) {
-                    document.write('<option selected value="' + i + '">' + i + '</option>')
+                    if(i < 10) {
+                        document.write('<option selected value="0' + i + '">0' + i + '</option>')
+                    }else{
+                        document.write('<option selected value="' + i + '">' + i + '</option>')
+                    }
                 } else {
-                    document.write('<option   value="' + i + '">' + i + '</option>')
+                    if(i < 10) {
+                        document.write('<option   value="0' + i + '">0' + i + '</option>')
+                    }else{
+                        document.write('<option   value="' + i + '">' + i + '</option>')
+                    }
                 }
             }
         </script>
